--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/nhansu.css">
     <title>Demo Web</title>
 </head>
 <body>
@@ -36,14 +37,6 @@
                                     <i class="ti-user"></i>
                                 </div>
                                 <span class="menuList-item-text">Nhân viên</span>
-                            </a>
-                        </li>
-                        <li class="menuList-item">
-                            <a href="./lich.html">
-                                <div class="menulist-item-icon">
-                                    <i class="ti-calendar"></i>
-                                </div>
-                                <span class="menuList-item-text">Thời khoá biểu</span>
                             </a>
                         </li>
                         <li class="menuList-item">
@@ -115,73 +108,105 @@
                             <!-- manual navigation start -->
                         </div>
                         <!-- tin tuc end -->
-                        <!-- todo list start -->
-                        <h1 class="home-container-title">Todo list</h1>
-                        <table class="todo-list-table">
-                            <thead class="todo-list-title-list">
-                                <tr>
-                                    <th>STT</th>
-                                    <th>To do</th>
-                                    <th>Status</th>
-                                    <th>Change</th>
-                                </tr>
-                            </thead>
-                            <tbody class="todo-list-work">
-                                <tr>
-                                    <th>1</th>
-                                    <th>Fix bug</th>
-                                    <th>
-                                        <input type="checkbox" name="" class="todo-list-check">
-                                    </th>
-                                    <th>
-                                        <input type="button" value="Change" class="todo-list-change-btn">
-                                    </th>
-                                </tr>
-                                <tr>
-                                    <th>2</th>
-                                    <th>Fix bug</th>
-                                    <th>
-                                        <input type="checkbox" name="" class="todo-list-check">
-                                    </th>
-                                    <th>
-                                        <input type="button" value="Change" class="todo-list-change-btn">
-                                    </th>
-                                </tr>
-                                <tr>
-                                    <th>3</th>
-                                    <th>Fix bug</th>
-                                    <th>
-                                        <input type="checkbox" name="" class="todo-list-check">
-                                    </th>
-                                    <th>
-                                        <input type="button" value="Change" class="todo-list-change-btn">
-                                    </th>
-                                </tr>
-                                <tr>
-                                    <th>4</th>
-                                    <th>Fix bug</th>
-                                    <th>
-                                        <input type="checkbox" name="" class="todo-list-check">
-                                    </th>
-                                    <th>
-                                        <input type="button" value="Change" class="todo-list-change-btn">
-                                    </th>
-                                </tr>
-                                <tr>
-                                    <th>5</th>
-                                    <th>Fix bug</th>
-                                    <th>
-                                        <input type="checkbox" name="" class="todo-list-check">
-                                    </th>
-                                    <th>
-                                        <input type="button" value="Change" class="todo-list-change-btn">
-                                    </th>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <button class="add-todo-btn">Add todo</button>
-                        <div class="clear"></div>
-                        <!-- todo list end -->
+                       <!-- nhan su online start -->
+                       <div class="employee-onl-wrapped">
+                           <h1 class="employee-onl-titlle">Nhân viên đi làm</h1>
+                            <div class="col-full">
+                                <div class="col-half">
+                                    <div class="employee-info">
+                                        <div class="employee-info-img"></div>
+                                        <div class="employee-about">
+                                            <p class="employee-name">Nguyen Duy Hieu</p>
+                                            <div class="employee-desc">
+                                                <span class="employee-age">Age: 22</span>
+                                                <span class="employee-position">Position: Truong phong</span>
+                                            </div>
+                                        </div>
+                                        <span class="employee-status active"></span>
+                                    </div>
+                                    <div class="employee-info">
+                                        <div class="employee-info-img"></div>
+                                        <div class="employee-about">
+                                            <p class="employee-name">Nguyen Duy Hieu</p>
+                                            <div class="employee-desc">
+                                                <span class="employee-age">Age: 22</span>
+                                                <span class="employee-position">Position: Truong phong</span>
+                                            </div>
+                                        </div>
+                                        <span class="employee-status active"></span>
+                                    </div>
+                                    <div class="employee-info">
+                                        <div class="employee-info-img"></div>
+                                        <div class="employee-about">
+                                            <p class="employee-name">Nguyen Duy Hieu</p>
+                                            <div class="employee-desc">
+                                                <span class="employee-age">Age: 22</span>
+                                                <span class="employee-position">Position: Truong phong</span>
+                                            </div>
+                                        </div>
+                                        <span class="employee-status active"></span>
+                                    </div>
+                                    <div class="employee-info">
+                                        <div class="employee-info-img"></div>
+                                        <div class="employee-about">
+                                            <p class="employee-name">Nguyen Duy Hieu</p>
+                                            <div class="employee-desc">
+                                                <span class="employee-age">Age: 22</span>
+                                                <span class="employee-position">Position: Truong phong</span>
+                                            </div>
+                                        </div>
+                                        <span class="employee-status active"></span>
+                                    </div>
+                                </div>
+                                <div class="col-half">
+                                    <div class="employee-info">
+                                        <div class="employee-info-img"></div>
+                                        <div class="employee-about">
+                                            <p class="employee-name">Nguyen Duy Hieu</p>
+                                            <div class="employee-desc">
+                                                <span class="employee-age">Age: 22</span>
+                                                <span class="employee-position">Position: Truong phong</span>
+                                            </div>
+                                        </div>
+                                        <span class="employee-status active"></span>
+                                    </div>
+                                    <div class="employee-info">
+                                        <div class="employee-info-img"></div>
+                                        <div class="employee-about">
+                                            <p class="employee-name">Nguyen Duy Hieu</p>
+                                            <div class="employee-desc">
+                                                <span class="employee-age">Age: 22</span>
+                                                <span class="employee-position">Position: Truong phong</span>
+                                            </div>
+                                        </div>
+                                        <span class="employee-status"></span>
+                                    </div>
+                                    <div class="employee-info">
+                                        <div class="employee-info-img"></div>
+                                        <div class="employee-about">
+                                            <p class="employee-name">Nguyen Duy Hieu</p>
+                                            <div class="employee-desc">
+                                                <span class="employee-age">Age: 22</span>
+                                                <span class="employee-position">Position: Truong phong</span>
+                                            </div>
+                                        </div>
+                                        <span class="employee-status"></span>
+                                    </div>
+                                    <div class="employee-info">
+                                        <div class="employee-info-img"></div>
+                                        <div class="employee-about">
+                                            <p class="employee-name">Nguyen Duy Hieu</p>
+                                            <div class="employee-desc">
+                                                <span class="employee-age">Age: 22</span>
+                                                <span class="employee-position">Position: Truong phong</span>
+                                            </div>
+                                        </div>
+                                        <span class="employee-status"></span>
+                                    </div>
+                                </div>
+                            </div>
+                       </div>
+                       <!-- nhan su online end -->
                     </div>
                     <!-- menu container end -->
                 </div>
