--- a/nhansu.html
+++ b/nhansu.html
@@ -39,14 +39,6 @@
                             </a>
                         </li>
                         <li class="menuList-item">
-                            <a href="./lich.html">
-                                <div class="menulist-item-icon">
-                                    <i class="ti-calendar"></i>
-                                </div>
-                                <span class="menuList-item-text">Thời khoá biểu</span>
-                            </a>
-                        </li>
-                        <li class="menuList-item">
                             <a href="./chamcong.html">
                                 <div class="menulist-item-icon">
                                     <i class="ti-bar-chart"></i>
@@ -79,84 +71,168 @@
                         </ul>
                         <div class="employee-wrapped">
                             <div class="employee-container-content-wrapped active">
-                                <div class="employee-container-content">
-                                    <div class="employee-info">
-                                        <div class="employee-info-img"></div>
-                                        <div class="employee-about">
-                                            <p class="employee-name">Nguyen Duy Hieu</p>
-                                            <div class="employee-desc">
-                                                <span class="employee-age">Age: 22</span>
-                                                <span class="employee-position">Position: Truong phong</span>
+                                <div class="col-half">
+                                    <div class="employee-container-content">
+                                        <div class="employee-info">
+                                            <div class="employee-info-img"></div>
+                                            <div class="employee-about">
+                                                <p class="employee-name">Nguyen Duy Hieu</p>
+                                                <div class="employee-desc">
+                                                    <span class="employee-age">Age: 22</span>
+                                                    <span class="employee-position">Position: Truong phong</span>
+                                                </div>
                                             </div>
                                         </div>
+                                        <div class="employee-action">
+                                            <span class="employee-fix">
+                                                <i class="ti-menu-alt"></i>
+                                            </span>
+                                            <span class="employee-delete">
+                                                <i class="ti-close"></i>
+                                            </span>
+                                        </div>
                                     </div>
-                                    <div class="employee-action">
-                                        <span class="employee-fix">
-                                            <i class="ti-menu-alt"></i>
-                                        </span>
-                                        <span class="employee-delete">
-                                            <i class="ti-close"></i>
-                                        </span>
+                                    <div class="employee-container-content">
+                                        <div class="employee-info">
+                                            <div class="employee-info-img"></div>
+                                            <div class="employee-about">
+                                                <p class="employee-name">Nguyen Duy Hieu</p>
+                                                <div class="employee-desc">
+                                                    <span class="employee-age">Age: 22</span>
+                                                    <span class="employee-position">Position: Truong phong</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="employee-action">
+                                            <span class="employee-fix">
+                                                <i class="ti-menu-alt"></i>
+                                            </span>
+                                            <span class="employee-delete">
+                                                <i class="ti-close"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="employee-container-content">
+                                        <div class="employee-info">
+                                            <div class="employee-info-img"></div>
+                                            <div class="employee-about">
+                                                <p class="employee-name">Nguyen Duy Hieu</p>
+                                                <div class="employee-desc">
+                                                    <span class="employee-age">Age: 22</span>
+                                                    <span class="employee-position">Position: Truong phong</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="employee-action">
+                                            <span class="employee-fix">
+                                                <i class="ti-menu-alt"></i>
+                                            </span>
+                                            <span class="employee-delete">
+                                                <i class="ti-close"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="employee-container-content">
+                                        <div class="employee-info">
+                                            <div class="employee-info-img"></div>
+                                            <div class="employee-about">
+                                                <p class="employee-name">Nguyen Duy Hieu</p>
+                                                <div class="employee-desc">
+                                                    <span class="employee-age">Age: 22</span>
+                                                    <span class="employee-position">Position: Truong phong</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="employee-action">
+                                            <span class="employee-fix">
+                                                <i class="ti-menu-alt"></i>
+                                            </span>
+                                            <span class="employee-delete">
+                                                <i class="ti-close"></i>
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="employee-container-content">
-                                    <div class="employee-info">
-                                        <div class="employee-info-img"></div>
-                                        <div class="employee-about">
-                                            <p class="employee-name">Nguyen Duy Hieu</p>
-                                            <div class="employee-desc">
-                                                <span class="employee-age">Age: 22</span>
-                                                <span class="employee-position">Position: Truong phong</span>
+                                <div class="col-half">
+                                    <div class="employee-container-content">
+                                        <div class="employee-info">
+                                            <div class="employee-info-img"></div>
+                                            <div class="employee-about">
+                                                <p class="employee-name">Nguyen Duy Hieu</p>
+                                                <div class="employee-desc">
+                                                    <span class="employee-age">Age: 22</span>
+                                                    <span class="employee-position">Position: Truong phong</span>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="employee-action">
-                                        <span class="employee-fix">
-                                            <i class="ti-menu-alt"></i>
-                                        </span>
-                                        <span class="employee-delete">
-                                            <i class="ti-close"></i>
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="employee-container-content">
-                                    <div class="employee-info">
-                                        <div class="employee-info-img"></div>
-                                        <div class="employee-about">
-                                            <p class="employee-name">Nguyen Duy Hieu</p>
-                                            <div class="employee-desc">
-                                                <span class="employee-age">Age: 22</span>
-                                                <span class="employee-position">Position: Truong phong</span>
-                                            </div>
+                                        <div class="employee-action">
+                                            <span class="employee-fix">
+                                                <i class="ti-menu-alt"></i>
+                                            </span>
+                                            <span class="employee-delete">
+                                                <i class="ti-close"></i>
+                                            </span>
                                         </div>
                                     </div>
-                                    <div class="employee-action">
-                                        <span class="employee-fix">
-                                            <i class="ti-menu-alt"></i>
-                                        </span>
-                                        <span class="employee-delete">
-                                            <i class="ti-close"></i>
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="employee-container-content">
-                                    <div class="employee-info">
-                                        <div class="employee-info-img"></div>
-                                        <div class="employee-about">
-                                            <p class="employee-name">Nguyen Duy Hieu</p>
-                                            <div class="employee-desc">
-                                                <span class="employee-age">Age: 22</span>
-                                                <span class="employee-position">Position: Truong phong</span>
+                                    <div class="employee-container-content">
+                                        <div class="employee-info">
+                                            <div class="employee-info-img"></div>
+                                            <div class="employee-about">
+                                                <p class="employee-name">Nguyen Duy Hieu</p>
+                                                <div class="employee-desc">
+                                                    <span class="employee-age">Age: 22</span>
+                                                    <span class="employee-position">Position: Truong phong</span>
+                                                </div>
                                             </div>
                                         </div>
+                                        <div class="employee-action">
+                                            <span class="employee-fix">
+                                                <i class="ti-menu-alt"></i>
+                                            </span>
+                                            <span class="employee-delete">
+                                                <i class="ti-close"></i>
+                                            </span>
+                                        </div>
                                     </div>
-                                    <div class="employee-action">
-                                        <span class="employee-fix">
-                                            <i class="ti-menu-alt"></i>
-                                        </span>
-                                        <span class="employee-delete">
-                                            <i class="ti-close"></i>
-                                        </span>
+                                    <div class="employee-container-content">
+                                        <div class="employee-info">
+                                            <div class="employee-info-img"></div>
+                                            <div class="employee-about">
+                                                <p class="employee-name">Nguyen Duy Hieu</p>
+                                                <div class="employee-desc">
+                                                    <span class="employee-age">Age: 22</span>
+                                                    <span class="employee-position">Position: Truong phong</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="employee-action">
+                                            <span class="employee-fix">
+                                                <i class="ti-menu-alt"></i>
+                                            </span>
+                                            <span class="employee-delete">
+                                                <i class="ti-close"></i>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="employee-container-content">
+                                        <div class="employee-info">
+                                            <div class="employee-info-img"></div>
+                                            <div class="employee-about">
+                                                <p class="employee-name">Nguyen Duy Hieu</p>
+                                                <div class="employee-desc">
+                                                    <span class="employee-age">Age: 22</span>
+                                                    <span class="employee-position">Position: Truong phong</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="employee-action">
+                                            <span class="employee-fix">
+                                                <i class="ti-menu-alt"></i>
+                                            </span>
+                                            <span class="employee-delete">
+                                                <i class="ti-close"></i>
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -250,7 +326,8 @@
                                         </div>
                                         <div class="employee-new-img-wrapped">
                                             <div class="employee-new-img-upload"></div>
-                                            <input class="upload-img-btn" type="file">Upload ảnh</input>
+                                            <label for="upload-img" class="upload-img-btn">Upload ảnh</label>
+                                            <input id="upload-img" type="file"></input>
                                         </div>
                                     </div>
                                     <button type="submit" class="submit-form-btn">Thêm nhân viên</button>
